# BionicFace-Panel

./: .gitignore  README.md  error.txt  index.html  package-lock.json  package.json
docs/: setup_guide_zh.md
raspi/: config.py  config_example.py  export_config_json.py  servo_server.py
scripts/: ping_test.py  pose_test.py
src/: App.tsx  styles.css  tauri.ts  topology.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: motor_config.json
src-tauri/src/: control.rs  main.rs
